# leap_protobuf

./: BUILD  CHANGES.txt  Makefile.am  README.txt  README_leap.txt  leap_protobuf-lite.pc.in  leap_protobuf.pc.in  update_file_lists.sh
benchmarks/: Makefile.am  benchmarks.proto
benchmarks/cpp/: cpp_benchmark.cc
benchmarks/datasets/google_message1/proto2/: benchmark_message1_proto2.proto
benchmarks/datasets/google_message1/proto3/: benchmark_message1_proto3.proto
benchmarks/datasets/google_message2/: benchmark_message2.proto
benchmarks/datasets/google_message3/: benchmark_message3.proto  benchmark_message3_1.proto  benchmark_message3_2.proto  benchmark_message3_3.proto  benchmark_message3_4.proto  benchmark_message3_5.proto  benchmark_message3_6.proto  benchmark_message3_7.proto  benchmark_message3_8.proto
benchmarks/datasets/google_message4/: benchmark_message4.proto  benchmark_message4_1.proto  benchmark_message4_2.proto  benchmark_message4_3.proto
benchmarks/util/: gogo_data_scrubber.cc  protoc-gen-gogoproto.cc  schema_proto2_to_proto3_util.h
cmake/: CMakeLists.txt  extract_includes.bat.in  install.cmake  leap_extract_includes.bat.in  leap_protobuf-config-version.cmake.in  leap_protobuf-config.cmake.in  leap_protobuf-module.cmake.in  leap_protobuf.pc.cmake  libleap_protobuf-lite.cmake  libleap_protobuf.cmake  libprotobuf-lite.cmake  libprotobuf.cmake  libprotoc.cmake  protobuf-config.cmake.in  protobuf-module.cmake.in  protoc.cmake  tests.cmake
conformance/: Makefile.am  conformance.proto  conformance_cpp.cc  conformance_test.cc  conformance_test.h  conformance_test_runner.cc
csharp/: CHANGES.txt
csharp/protos/: map_unittest_proto3.proto  unittest_custom_options_proto3.proto  unittest_import_proto3.proto  unittest_import_public_proto3.proto  unittest_issues.proto  unittest_proto3.proto
csharp/src/Google.Protobuf/: Google.Protobuf.csproj  JsonFormatter.cs  JsonParser.cs
csharp/src/Google.Protobuf.Test/: ByteStringTest.cs
csharp/src/Google.Protobuf.Test/Reflection/: DescriptorsTest.cs
csharp/src/Google.Protobuf.Test/TestProtos/: TestMessagesProto3.cs  UnittestWellKnownTypes.cs
csharp/src/Google.Protobuf/Reflection/: Descriptor.cs  MessageDescriptor.cs
csharp/src/Google.Protobuf/WellKnownTypes/: Any.cs  Api.cs  Duration.cs  Empty.cs  FieldMask.cs  SourceContext.cs  Struct.cs  Timestamp.cs  Type.cs  Wrappers.cs
examples/: CMakeLists.txt  add_person.cc  addressbook.proto  list_people.cc
js/: test.proto
js/compatibility_tests/v3.0.0/: test.proto
js/compatibility_tests/v3.1.0/: test.proto
objectivec/: GPBBootstrap.h  GPBProtocolBuffers.h  GPBUtilities_PackagePrivate.h  GPBWellKnownTypes.h
objectivec/Tests/: UnitTests-Bridging-Header.h  unittest_cycle.proto  unittest_extension_chain_a.proto  unittest_extension_chain_b.proto  unittest_extension_chain_c.proto  unittest_extension_chain_d.proto  unittest_extension_chain_e.proto  unittest_extension_chain_f.proto  unittest_extension_chain_g.proto  unittest_objc.proto  unittest_runtime_proto2.proto  unittest_runtime_proto3.proto
objectivec/google/protobuf/: Any.pbobjc.h  Api.pbobjc.h  Duration.pbobjc.h  Empty.pbobjc.h  FieldMask.pbobjc.h  SourceContext.pbobjc.h  Struct.pbobjc.h  Timestamp.pbobjc.h  Type.pbobjc.h  Wrappers.pbobjc.h
php/ext/google/protobuf/: protobuf.h  upb.c  upb.h  utf8.h
php/tests/proto/: test_import_descriptor_proto.proto
python/: MANIFEST.in
python/google/protobuf/: python_protobuf.h
python/google/protobuf/internal/: any_test.proto  api_implementation.cc  descriptor_pool_test1.proto  descriptor_pool_test2.proto  factory_test1.proto  factory_test2.proto  file_options_test.proto  message_set_extensions.proto  missing_enum_values.proto  more_extensions.proto  more_extensions_dynamic.proto  more_messages.proto  packed_field_test.proto  python_protobuf.cc  test_bad_identifiers.proto
python/google/protobuf/pyext/: descriptor.cc  descriptor.h  descriptor_containers.cc  descriptor_containers.h  descriptor_database.cc  descriptor_database.h  descriptor_pool.cc  descriptor_pool.h  extension_dict.cc  extension_dict.h  map_container.cc  map_container.h  message.cc  message.h  message_factory.cc  message_factory.h  message_module.cc  proto2_api_test.proto  python.proto  repeated_composite_container.cc  repeated_composite_container.h  repeated_scalar_container.cc  repeated_scalar_container.h  safe_numerics.h  scoped_pyobject_ptr.h  thread_unsafe_shared_ptr.h
ruby/ext/google/protobuf_c/: message.c  protobuf.h  upb.h  wrap_memcpy.c
ruby/src/main/: sentinel.proto
src/: Makefile.am
src/google/leap_protobuf/: any.cc  any.h  any.pb.cc  any.pb.h  any_test.cc  api.pb.cc  api.pb.h  arena.cc  arena.h  arena_impl.h  arena_test_util.cc  arena_test_util.h  arena_unittest.cc  arenastring.cc  arenastring.h  arenastring_unittest.cc  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor_database.cc  descriptor_database.h  descriptor_database_unittest.cc  descriptor_unittest.cc  drop_unknown_fields_test.cc  duration.pb.cc  duration.pb.h  dynamic_message.cc  dynamic_message.h  dynamic_message_unittest.cc  empty.pb.cc  empty.pb.h  extension_set.cc  extension_set.h  extension_set_heavy.cc  extension_set_unittest.cc  field_mask.pb.cc  field_mask.pb.h  generated_enum_reflection.h  generated_enum_util.h  (+81 more)
src/google/leap_protobuf/compiler/: importer.cc  (+25 more)
src/google/protobug/: any.cc  any.h  any.pb.cc  any.pb.h  any.proto  any_test.cc  any_test.proto  api.pb.cc  api.pb.h  api.proto  arena.cc  arena.h  arena_impl.h  arena_test_util.cc  arena_test_util.h  arena_unittest.cc  arenastring.cc  arenastring.h  arenastring_unittest.cc  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor.proto  descriptor_database.cc  descriptor_database.h  descriptor_database_unittest.cc  descriptor_unittest.cc  drop_unknown_fields_test.cc  duration.pb.cc  duration.pb.h  duration.proto  dynamic_message.cc  dynamic_message.h  dynamic_message_unittest.cc  empty.pb.cc  empty.pb.h  empty.proto  extension_set.cc  extension_set.h  (+125 more)
tools/: Makefile  filter_all.csh  filter_source.lex
(+740 files in other folders)
